--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-gtm-module": "^2.0.11",
-    "react-tooltip-lite": "^1.12.0",
+    "react-laag": "^2.0.4",
     "sass": "^1.49.9"
   },
   "devDependencies": {
