--- a/data/secure.yaml
+++ b/data/secure.yaml
@@ -4,15 +4,19 @@
     - title: 'Slither'
       logo: '/logos/slither.png'
       url: 'https://github.com/crytic/slither'
+      description: null
     - title: 'Manticore'
       logo: '/logos/manticore.png'
       url: 'https://github.com/trailofbits/manticore'
+      description: null
     - title: 'Mythril'
       logo: '/logos/mythril.png'
       url: 'https://github.com/ConsenSys/mythril'
+      description: null
     - title: 'OpenZeppelin Defender'
       logo: '/logos/openzeppelin-defender.png'
       url: 'https://openzeppelin.com/defender/'
+      description: null
 
 - name: 'Auditing'
   id: 'auditing'
@@ -20,9 +24,12 @@
     - title: 'Consensys Diligence'
       logo: '/logos/consensys-diligence.png'
       url: 'https://consensys.net/diligence/'
+      description: null
     - title: 'HashEx'
       logo: '/logos/hashex.png'
       url: 'https://hashex.org/'
+      description: null
     - title: 'Quantstamp'
       logo: '/logos/quantstamp.png'
       url: 'https://quantstamp.com/'
+      description: null
