--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
+    "fuse.js": "^6.6.2",
     "intro.js": "^5.1.0",
     "intro.js-react": "^0.6.0",
     "next": "12.1.6",
