Fix: doesn't scroll on key press by toggling the scroll padding top

--- a/data/develop.yaml
+++ b/data/develop.yaml
@@ -77,7 +77,7 @@
       logo: '/logos/ganache.png'
       url: 'https://trufflesuite.com/ganache/'
       description: null
-    - title: 'Dapptools'
+    - title: 'Dapp Tools'
       logo: '/logos/dapptools.png'
       url: 'https://dapp.tools/'
       description: null
