--- a/data/market.yaml
+++ b/data/market.yaml
@@ -17,7 +17,7 @@
       logo: '/logos/coinbase.png'
       url: 'https://www.coinbase.com/ventures'
       description: null
-    - title: "Blockchain Centre's Blockchain Engine"
+    - title: 'Blockchain Centre'
       logo: '/logos/blockchain-centre.png'
       url: 'https://blockchaincentre.io/'
       description: null
@@ -31,7 +31,7 @@
       description: null
     - title: 'CATENA'
       logo: '/logos/catena.png'
-      url: 'https://www.catena-capital.com/' 
+      url: 'https://www.catena-capital.com/'
       description: null
     - title: 'Y Combinator'
       logo: '/logos/y-combinator.png'
