--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "prettier --ignore-path .gitignore \"**/*.{js,jsx,json,md,mdx}\"",
     "format": "npm run prettier -- --write",
     "check-format": "npm run prettier -- --check",
+    "test": "jest",
     "validate": "npm run check-format && npm run lint",
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006 -s ./public",
@@ -48,6 +49,9 @@
     "eslint-plugin-storybook": "^0.5.11",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.4",
+    "jest": "^27.5.1",
+    "jest-environment-jsdom": "^28.1.0",
+    "jest-transform-yaml": "^1.0.0",
     "prettier": "^2.6.1",
     "yaml-loader": "^0.8.0"
   }
