--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,6 +8,6 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 17
-      - run: npm ci --legacy-peer-deps
+      - run: npm ci
       - run: npm run validate
       - run: npm run build
