--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 17
-      - run: npm i
+          node-version: 16.14.0
+      - run: npm ci
       - run: npm run validate
       - run: npm run build
