title rename and replacements

--- a/data/learn.yaml
+++ b/data/learn.yaml
@@ -45,7 +45,7 @@
     - title: 'Chainlink'
       logo: '/logos/learn/chainlink.png'
       url: 'https://blog.chain.link/category/developers/'
-      description: 'Check out the latest developer content, tutorials, and workshops around Chainlink and other leading blockchain ecosystem projects.'
+      description: 'Check out the latest developer content, tutorials, and workshops around Chainlink and other leading Blockchain ecosystem projects.'
     - title: 'Ethereum Foundation'
       logo: '/logos/learn/ethereumfoundation.png'
       url: 'https://ethereum.org/en/foundation/'
