--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,6 +8,6 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 16.14.0
-      - run: CI=false && npm ci
+      - run: npm ci
       - run: npm run validate
       - run: npm run build
