chore: removed subheading, rename app to dapp

--- a/data/learn.yaml
+++ b/data/learn.yaml
@@ -65,4 +65,4 @@
     - title: 'ConsenSys'
       logo: '/logos/learn/consensys.png'
       url: 'https://consensys.net/'
-      description: 'Build next-generation apps, launch blockchain-based financial infrastructure, and access the decentralized web with ConsenSys&#039; Ethereum product suite.'
+      description: 'Build next-generation dapps, launch blockchain-based financial infrastructure, and access the decentralized web with ConsenSys&#039; Ethereum product suite.'
