--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blockchain-ecosystem-map",
+  "name": "blockchain-ecosystem",
   "version": "0.1.0",
   "private": true,
   "scripts": {
