added url to .env

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_GOOGLE_ANALYTICS_TRACKING=GTM-xxxxxx
-GITHUB_REPO_URL=https://github.com/thisdot/blockchain-ecosystem-map
+NEXT_GITHUB_REPO_URL=https://github.com/thisdot/blockchain-ecosystem-map
+NEXT_BLOCKCHAIN_URL=https://www.blockchain.education/
+NEXT_BLOCKCHAIN_ECOSYSTEM_URL=https://ecosystem.blockchain.education/
